// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[<InputGroup />] matches to snapshot 1`] = `
<InputGroup__StyledInputGroup
  label="First Name"
  name="name"
>
  <Label>
    First Name
  </Label>
  <Input
    defaultValue=""
    id="name"
    multiline={false}
    name="name"
    type="text"
  />
</InputGroup__StyledInputGroup>
`;

exports[`[<InputGroup />] when pass multiline prop matches to snapshot with textarea 1`] = `
<InputGroup__StyledInputGroup
  label="Comments"
  multiline={true}
  name="comments"
>
  <Label>
    Comments
  </Label>
  <Input
    defaultValue=""
    id="comments"
    multiline={true}
    name="comments"
    type="text"
  />
</InputGroup__StyledInputGroup>
`;

exports[`[<InputGroup />] when pass type prop matches to snapshot 1`] = `
<InputGroup__StyledInputGroup
  label="Upload your Avatar"
  name="avatar"
  type="file"
>
  <Label>
    Upload your Avatar
  </Label>
  <Input
    defaultValue=""
    id="avatar"
    multiline={false}
    name="avatar"
    type="file"
  />
</InputGroup__StyledInputGroup>
`;
